device-provider: gst_device_provider_unhide_provider() always fails

https://bugzilla.gnome.org/show_bug.cgi?id=788520